--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
           <div class="col-lg-11 col-xl-11 col-xxl-11">
             <!-- Experience Section-->
             <section id="experience" class="pt-1 pb-1">
-              <div class="d-flex align-items-center justify-content-between mb-4">
-                <h2 class="text-primary fw-bolder mb-0">Experience</h2>
-                <!-- Download resume button-->
-                <!-- Note: Set the link href target to a PDF file within your project-->
-                <a class="btn btn-primary px-4 py-3" href="assets/pdf/resume.pdf">
-                  <div class="d-inline-block bi bi-download me-2"></div>
-                  Download Resume
-                </a>
+              <div class="row mb-4">
+                <div class="col mb-0 mb-lg-0">
+                  <h2 class="text-primary fw-bolder">Experience</h2>
+                </div>
+                <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end">
+                  <a class="btn btn-primary px-4 py-3" href="assets/pdf/resume.pdf">
+                    <div class="d-inline-block bi bi-download me-2"></div>
+                    Download Resume
+                  </a>
+                </div>
               </div>
               <!-- Experience Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
@@ -156,7 +158,7 @@
                           <li>Organised Live Citizen Dialogues, high level “Our Baltic” conference</li>
                           <li>Collaborated “One year anniversary of the Cabinet” communication activities</li>
                           <li>Collaborated to the Commissioner's communication strategy</li>
-                          <li>Briefed Commissionner for weekly meetings with DGs ENV & MARE</li>
+                          <li>Briefed Commissioner for weekly meetings with DGs ENV & MARE</li>
                         </ul>
                       </div>
                     </div>
@@ -244,7 +246,7 @@
                     <div class="col-lg-4 text-center text-lg-start mb-4">
                       <div class="bg-light p-4 rounded-4">
                         <div class="text-primary fw-bolder mb-2">Sep 2015 - Nov 2015</div>
-                        <div class="small fw-bolder">Human Resourse & Store Management Intern</div>
+                        <div class="small fw-bolder">Human Resource & Store Management Intern</div>
                         <div class="small text-muted">Rimi Lietuva</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
@@ -387,13 +389,13 @@
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
                       <div class="col mb-4 mb-md-0">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Result oriented</div>
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Result-oriented</div>
                       </div>
                       <div class="col mb-4 mb-md-0">
                         <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Creative & Curious</div>
                       </div>
                       <div class="col">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Hands on attitude</div>
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Hands-on-attitude</div>
                       </div>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3">
@@ -415,7 +417,7 @@
                         <i class="bi bi-code-slash"></i>
                       </div>
                       <h3 class="fw-bolder mb-0">
-                        <span class="text-gradient d-inline">Lanagues</span>
+                        <span class="text-gradient d-inline">Languages</span>
                       </h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
