--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
             <li class="nav-item"><a class="nav-link me-lg-3" href="#experience">Experience</a></li>
             <li class="nav-item"><a class="nav-link me-lg-3" href="#education">Education</a></li>
           </ul>
-          <a href="mailto:ziville.kairyte@gmail.com" target="_blank" class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0">
+          <a
+            href="mailto:ziville.kairyte@gmail.com"
+            target="_blank"
+            class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0"
+          >
             <span class="d-flex align-items-center">
               <i class="bi-chat-text-fill me-2"></i>
               <span class="small">ziville.kairyte@gmail.com</span>
@@ -101,10 +105,10 @@
               </div>
               <!-- Experience Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">Jun 2019 - Present</div>
                         <div class="small fw-bolder">Communications Manager</div>
                         <div class="small text-muted">A.I.S.E</div>
@@ -138,10 +142,10 @@
               </div>
               <!-- Experience Card 2-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">Mar 2020 - Feb 2021</div>
                         <div class="small fw-bolder">BlueBook Trainee</div>
                         <div class="small text-muted">European Commission</div>
@@ -167,10 +171,10 @@
               </div>
               <!-- Experience Card 3-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">Mar 2018 - Jul 2018</div>
                         <div class="small fw-bolder">Social Media Executive</div>
                         <div class="small text-muted">Cryptonews.com</div>
@@ -194,10 +198,10 @@
               </div>
               <!-- Experience Card 4-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">Sep 2017 - Jul 2018</div>
                         <div class="small fw-bolder">Social Media & Community Manager</div>
                         <div class="small text-muted">Lympo.io</div>
@@ -233,10 +237,10 @@
               </div>
               <!-- Experience Card 5-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                   <div class="row gx-5">
                     <div class="col-lg-4 text-center text-lg-start mb-4">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">2011 - 2020</div>
                         <div class="small fw-bolder">Communication Assistant</div>
                         <div class="small text-muted">Jardas ir Ko</div>
@@ -244,7 +248,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start mb-4">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">Sep 2015 - Nov 2015</div>
                         <div class="small fw-bolder">Human Resource & Store Management Intern</div>
                         <div class="small text-muted">Rimi Lietuva</div>
@@ -252,7 +256,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start mb-4">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">2013 - 2017</div>
                         <div class="small fw-bolder">Freelancer photographer</div>
                         <div class="small text-muted">Vilnius, LT</div>
@@ -267,10 +271,10 @@
               <h2 class="text-secondary fw-bolder mb-4">Education</h2>
               <!-- Education Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                  <div class="row align-items-center gx-5">
+                <div class="card-body p-3">
+                  <div class="row gx-5">
                     <div class="col-lg-4 text-center text-lg-start mb-4">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-secondary fw-bolder mb-2">2011 - 2016</div>
                         <div class="mb-2">
                           <div class="small fw-bolder">Bachelor's degree</div>
@@ -283,7 +287,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start mb-4">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-secondary fw-bolder mb-2">2017 - 2019</div>
                         <div class="mb-2">
                           <div class="small fw-bolder">Master's degree</div>
@@ -298,7 +302,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start mb-4">
-                      <div class="bg-light p-4 rounded-4">
+                      <div class="bg-light p-3 rounded-4">
                         <div class="text-secondary fw-bolder mb-2">2019 - 2020</div>
                         <div class="mb-2">
                           <div class="small fw-bolder">Web Design of UX/UI Certificate</div>
@@ -320,13 +324,10 @@
             <section id="skills" class="pt-1 pb-1">
               <!-- Skillset Card-->
               <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                   <!-- Hard skills list-->
                   <div class="mb-4">
                     <div class="d-flex align-items-center mb-4">
-                      <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                        <i class="bi bi-tools"></i>
-                      </div>
                       <h3 class="fw-bolder mb-0">
                         <span class="text-gradient d-inline">Hard Skills</span>
                       </h3>
@@ -380,9 +381,6 @@
                   <!-- Soft Skills list-->
                   <div class="mb-4">
                     <div class="d-flex align-items-center mb-4">
-                      <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                        <i class="bi bi-code-slash"></i>
-                      </div>
                       <h3 class="fw-bolder mb-0">
                         <span class="text-gradient d-inline">Soft Skills</span>
                       </h3>
@@ -413,9 +411,6 @@
                   <!-- Languages -->
                   <div class="mb-0">
                     <div class="d-flex align-items-center mb-4">
-                      <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                        <i class="bi bi-code-slash"></i>
-                      </div>
                       <h3 class="fw-bolder mb-0">
                         <span class="text-gradient d-inline">Languages</span>
                       </h3>
