[IMP] refactor resume past experiences in PDF and website

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Jun 2019 - Present</div>
+                        <div class="text-primary fw-bolder mb-2">Jun 2019 - Nov 2023</div>
                         <div class="small fw-bolder">Communications Manager</div>
                         <div class="small text-muted">A.I.S.E</div>
                         <div class="small text-muted">Brussels, BE</div>
@@ -117,23 +117,18 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
+                        <div>
+                          A.I.S.E. is a trade association working for the industry with EU regulators for over 70 years.
+                          Membership consists of more than 900 member companies. I was part of the communications & public affairs department,
+                          where I focused on improving corporate communications internally and externally.
+                        </div>
                         <ul>
-                          <li>Collaborating on the corporate website with copywriters, developers and agencies</li>
-                          <li>Creating and executing social media strategy (LinkedIn and Twitter)</li>
-                          <li>Leading annual corporate brochure creation, digital and printed versions</li>
-                          <li>
-                            Managing consumer websites: cleanright.eu, keepcapsfromkids.eu - content updates, managing
-                            copywriters, translators, and graphic designers
-                          </li>
-                          <li>Improved internal member communication via newsletters</li>
-                          <li>Working with the Euromonitor database for economic data and trends</li>
-                          <li>Leading a working group of communication experts working in the EU countries</li>
-                          <li>Facilitating colleagues participating in the conferences</li>
-                          <li>Organising annual “A.I.S.E. Cleaning & Hygiene Forum”</li>
-                          <li>
-                            Sub-led voluntary initiatives and climate campaigns with member companies - P&G, Unilever,
-                            Henkel, Reckitt, etc.
-                          </li>
+                          <li>Managed websites & contributed to successful relaunches</li>
+                          <li>Created collaterals & organising events</li>
+                          <li>Improved Email & Social media marketing</li>
+                          <li>Conducted & analysed industry market data</li>
+                          <li>Led a communication experts group working across the EU</li>
+                          <li>Sub-led sustainability initiatives with first-tier member FMCG companies</li>
                         </ul>
                       </div>
                     </div>
@@ -154,15 +149,15 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
+                        <div>
+                          I was part of the Commissioner's Sinkevicius cabinet and was focusing on improving
+                          communication activities covering these topics: Circular Economy Action Plan,
+                          Chemicals Strategy for Sustainability, Hydrogen Strategy and Biodiversity Strategy.
+                        </div>
                         <ul>
-                          <li>
-                            Trainee at Commissioner's Virginijus Sinkevicius Cabinet responsible for environment,
-                            fisheries and oceans
-                          </li>
-                          <li>Organised Live Citizen Dialogues, high level “Our Baltic” conference</li>
-                          <li>Collaborated “One year anniversary of the Cabinet” communication activities</li>
-                          <li>Collaborated to the Commissioner's communication strategy</li>
-                          <li>Briefed Commissioner for weekly meetings with DGs ENV & MARE</li>
+                          <li>Organised virtual & physical events</li>
+                          <li>Created Commissioner's communication strategy</li>
+                          <li>Wrote articles for external communication</li>
                         </ul>
                       </div>
                     </div>
@@ -183,13 +178,16 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
+                        <div>
+                          A news website informing its readers about cryptocurrency trends,
+                          news and the current market situation.
+                          I was working part time with them and mainly focused on setting up,
+                          creating and growing social media presence.
+                        </div>
                         <ul>
-                          <li>Collaborated on the content creation and social networks marketing strategy</li>
-                          <li>Executed communication plans in collaboration with copywriters, graphic designers</li>
-                          <li>
-                            Increased engagement from targeted audience in social media channels such as Facebook,
-                            Twitter and Instagram without any budget
-                          </li>
+                          <li>Created & executed social media strategy</li>
+                          <li>Managed copywriters & graphic designers</li>
+                          <li>Increased 27% social media channels without any budget</li>
                         </ul>
                       </div>
                     </div>
@@ -210,25 +208,23 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
+                        <div>
+                          Lympo is a blockchain startup eager to help people to develop and maintain healthy sports
+                          habits. Participated in the core team initiating the crowdfunding raising 12 million US 
+                          dollars and we successfully finished the campaign 3 days before the close date.
+                        </div>
                         <ul>
-                          <li>Managed copywriters and designers on content creation</li>
-                          <li>Collaborated with the CMO & CSO developed and implemented marketing strategy</li>
-                          <li>Managed Lympo's community Telegram channels with 12 000 active members</li>
-                          <li>Created and executed communication plans</li>
+                          <li>Developed & implemented marketing strategy</li>
+                          <li>Managed Lympo's community with 12 000 active members</li>
+                          <li>Improved email marketing</li>
+                          <li>Developed Lympo.lt website</li>
+                          <li>Led successful partnerships, adeptly fostering collaboration for mutual benefit</li>
+                          <li>Organising internal & external events for stakeholders</li>
                           <li>
-                            Participated in the core team initiating the crowdfunding raising 12 million US dollars
+                            Created & maintained Lympo.lt platform brand strategy to increase the brand awareness
+                            & lead generation
                           </li>
-                          <li>
-                            Created and maintained Lympo.lt platform brand strategy to increase the brand awareness and
-                            lead generation
-                          </li>
-                          <li>Created content for social media profiles</li>
-                          <li>Created and distributed weekly newsletters (avr. open rate 60%, CTR - 40%)</li>
-                          <li>Developed Lympo.lt website in collaboration with the development team</li>
-                          <li>
-                            Organised company's events (from small meetups up to sports fairs with 5000+ guests),
-                            working closely with the digital agency
-                          </li>
+                          <li>Managed creative agencies</li>
                         </ul>
                       </div>
                     </div>
