[IMP] experience: re-word for more explanation

--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
                     <div class="col-lg-8">
                       <div>
                         <div>
-                          A.I.S.E. is a trade association working for the industry with EU regulators for over 70 years.
-                          Membership consists of more than 900 member companies. I was part of the communications & public affairs department,
-                          where I focused on improving corporate communications internally and externally.
+                          An European association working with EU institutions and the home cleaning products industry,
+                          representing over FMCG 900 companies, including first-tier corporations: Unilever, P&G, Henkel.
+                          I focused on improving corporate communications internally and externally.
                         </div>
                         <ul>
-                          <li>Managed websites & contributed to successful relaunches</li>
-                          <li>Created collaterals & organising events</li>
-                          <li>Improved Email & Social media marketing</li>
-                          <li>Conducted & analysed industry market data</li>
-                          <li>Led a communication experts group working across the EU</li>
-                          <li>Sub-led sustainability initiatives with first-tier member FMCG companies</li>
+                          <li>Led website management and successful relaunch projects, enhancing user experience and aligning content strategy with organizational goals</li>
+                          <li>Developed marketing materials and managed the planning and execution of high-impact industry events, driving member engagement and visibility</li>
+                          <li>Enhanced email and social media marketing campaigns, improving reach and engagement while aligning messaging with broader communication strategies</li>
+                          <li>Conducted comprehensive industry research, analyzing market data and trends to inform communication strategies and provide insights to stakeholders</li>
+                          <li>Led a pan-European communication group, fostering collaboration and ensuring consistent messaging across diverse teams and regions</li>
+                          <li>Supported sustainability initiatives in partnership with leading industry stakeholders, contributing to the development of eco-friendly practices and communication strategies</li>
                         </ul>
                       </div>
                     </div>
@@ -150,14 +150,13 @@
                     <div class="col-lg-8">
                       <div>
                         <div>
-                          I was part of the Commissioner's Sinkevicius cabinet and was focusing on improving
-                          communication activities covering these topics: Circular Economy Action Plan,
-                          Chemicals Strategy for Sustainability, Hydrogen Strategy and Biodiversity Strategy.
+                          I was part of the Commissioner’s Sinkevicius cabinet and was focusing on improving communication activities covering these topics:
+                          Circular Economy Action Plan, Chemicals Strategy for Sustainability, Hydrogen Strategy and Biodiversity Strategy.
                         </div>
                         <ul>
-                          <li>Organised virtual & physical events</li>
-                          <li>Created Commissioner's communication strategy</li>
-                          <li>Wrote articles for external communication</li>
+                          <li>Organized virtual and in-person events, ensuring smooth execution and participation</li>
+                          <li>Developed communication strategy to align with organizational objectives</li>
+                          <li>Wrote articles for external communications, enhancing outreach and visibility/li>
                         </ul>
                       </div>
                     </div>
@@ -170,24 +169,27 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Mar 2018 - Jul 2018</div>
-                        <div class="small fw-bolder">Social Media Executive</div>
-                        <div class="small text-muted">Cryptonews.com</div>
+                        <div class="text-primary fw-bolder mb-2">Sep 2017 - Jul 2018</div>
+                        <div class="small fw-bolder">Marketing Executive</div>
+                        <div class="small text-muted">Lympo.io</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
                     </div>
                     <div class="col-lg-8">
                       <div>
                         <div>
-                          A news website informing its readers about cryptocurrency trends,
-                          news and the current market situation.
-                          I was working part time with them and mainly focused on setting up,
-                          creating and growing social media presence.
+                          Lympo is a blockchain startup eager to help people to develop and maintain healthy sports habits.
+                          Being part of the core team initiated the crowdfunding, raised 12 million US dollars, a successfully finished the campaign 3 days before the closing date.
                         </div>
                         <ul>
-                          <li>Created & executed social media strategy</li>
-                          <li>Managed copywriters & graphic designers</li>
-                          <li>Increased 27% social media channels without any budget</li>
+                          <li>Developed and executed comprehensive marketing strategies for growth and engagement</li>
+                          <li>Managed a thriving community of 12,000 active members for Lympo</li>
+                          <li>Enhanced email marketing campaigns to drive improved results</li>
+                          <li>Oversaw the development of the Lympo.lt website to optimize user experience</li>
+                          <li>Led successful partnerships, fostering collaboration for mutual benefit</li>
+                          <li>Organized internal and external events for key stakeholders</li>
+                          <li>Created and maintained Lympo.lt's brand strategy to boost awareness and lead generation</li>
+                          <li>Managed creative agencies to ensure consistent and impactful brand messaging</li>
                         </ul>
                       </div>
                     </div>
@@ -200,31 +202,22 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Sep 2017 - Jul 2018</div>
-                        <div class="small fw-bolder">Social Media & Community Manager</div>
-                        <div class="small text-muted">Lympo.io</div>
+                        <div class="text-primary fw-bolder mb-2">Mar 2018 - Jul 2018</div>
+                        <div class="small fw-bolder">Social Media Marketing Executive</div>
+                        <div class="small text-muted">Cryptonews.com</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
                     </div>
                     <div class="col-lg-8">
                       <div>
                         <div>
-                          Lympo is a blockchain startup eager to help people to develop and maintain healthy sports
-                          habits. Participated in the core team initiating the crowdfunding raising 12 million US 
-                          dollars and we successfully finished the campaign 3 days before the close date.
+                          I contributed part-time to a news website focused on informing readers about cryptocurrency trends, news, and market developments.
+                          My primary responsibilities involved setting up, creating, and expanding the website’s social media presence, driving audience growth and engagement.
                         </div>
                         <ul>
-                          <li>Developed & implemented marketing strategy</li>
-                          <li>Managed Lympo's community with 12 000 active members</li>
-                          <li>Improved email marketing</li>
-                          <li>Developed Lympo.lt website</li>
-                          <li>Led successful partnerships, adeptly fostering collaboration for mutual benefit</li>
-                          <li>Organising internal & external events for stakeholders</li>
-                          <li>
-                            Created & maintained Lympo.lt platform brand strategy to increase the brand awareness
-                            & lead generation
-                          </li>
-                          <li>Managed creative agencies</li>
+                          <li>Developed and executed a targeted social media strategy to boost engagement</li>
+                          <li>Supervised copywriters and graphic designers, ensuring consistent content delivery</li>
+                          <li>Achieved a 27% increase in social media growth with no additional budget</li>
                         </ul>
                       </div>
                     </div>
