[IMP] experience: correct date of AISE
+ Add space between job description and bullet points

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Jun 2019 - Nov 2023</div>
+                        <div class="text-primary fw-bolder mb-2">Jun 2021 - Nov 2023</div>
                         <div class="small fw-bolder">Communications Manager</div>
                         <div class="small text-muted">A.I.S.E</div>
                         <div class="small text-muted">Brussels, BE</div>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        <div>
+                        <div class="mb-3">
                           An European association working with EU institutions and the home cleaning products industry,
                           representing over FMCG 900 companies, including first-tier corporations: Unilever, P&G, Henkel.
                           I focused on improving corporate communications internally and externally.
@@ -149,7 +149,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        <div>
+                        <div class="mb-3">
                           I was part of the Commissioner’s Sinkevicius cabinet and was focusing on improving communication activities covering these topics:
                           Circular Economy Action Plan, Chemicals Strategy for Sustainability, Hydrogen Strategy and Biodiversity Strategy.
                         </div>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        <div>
+                        <div class="mb-3">
                           Lympo is a blockchain startup eager to help people to develop and maintain healthy sports habits.
                           Being part of the core team initiated the crowdfunding, raised 12 million US dollars, a successfully finished the campaign 3 days before the closing date.
                         </div>
@@ -202,7 +202,7 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Mar 2018 - Jul 2018</div>
+                        <div class="text-primary fw-bolder mb-2">2018</div>
                         <div class="small fw-bolder">Social Media Marketing Executive</div>
                         <div class="small text-muted">Cryptonews.com</div>
                         <div class="small text-muted">Vilnius, LT</div>
@@ -210,7 +210,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        <div>
+                        <div class="mb-3">
                           I contributed part-time to a news website focused on informing readers about cryptocurrency trends, news, and market developments.
                           My primary responsibilities involved setting up, creating, and expanding the website’s social media presence, driving audience growth and engagement.
                         </div>
