[FIX] experience: download the resume in a new tab

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <h2 class="text-primary fw-bolder">Experience</h2>
                 </div>
                 <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end">
-                  <a class="btn btn-primary px-4 py-3" href="assets/pdf/resume.pdf">
+                  <a class="btn btn-primary px-4 py-3" href="assets/pdf/resume.pdf" target="_blank">
                     <div class="d-inline-block bi bi-download me-2"></div>
                     Download Resume
                   </a>
