--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
             <li class="nav-item"><a class="nav-link me-lg-3" href="#experience">Experience</a></li>
             <li class="nav-item"><a class="nav-link me-lg-3" href="#education">Education</a></li>
+            <li class="nav-item"><a class="nav-link me-lg-3" href="#skills">Skills</a></li>
           </ul>
           <a
             href="mailto:ziville.kairyte@gmail.com"
@@ -69,7 +70,7 @@
             <!-- Mashead text and app badges-->
             <div class="mb-5 mb-lg-0 text-center text-lg-start">
               <h1 class="display-1 lh-1 mb-3">Zivile Kairyte</h1>
-              <p class="lead fw-normal text-muted mb-5">
+              <p class="lead fw-normal mb-5">
                 Experienced Communications Manager with a track record of successfully driving growth and executing
                 results-based marketing programs. Skilled in crafting clear and compelling value propositions for
                 diverse audiences and managing multiple projects in a fast-paced environment. Exceptional verbal and
@@ -311,10 +312,190 @@
             </section>
             <!-- Skills Section-->
             <section id="skills" class="pt-1 pb-1">
-              <!-- Skillset Card-->
+              <h2 class="text-secondary fw-bolder mb-4">Skills</h2>
+              <!-- Skills Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
                 <div class="card-body p-3">
-                  <!-- Hard skills list-->
+                  <div class="row gx-5">
+                    <div class="col-lg-4 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Website</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Wordpress, Joomla</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Buffer, Hootsuite, Loomly</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">HTML, CSS</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">HotJar</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Odoo</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Mailchimp</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Omnichannel Marketing</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Content Marketing</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Field Marketing</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Print Marketing</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">E-commerce Marketing</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Social Media Marketing</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">SEO / SEM Strategy</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Design</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Adobe Photoshop</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Adobe Illustrator</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Adobe XD</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Canva</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Figma</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">CapCut</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Presentation Design</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Advertising</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Email Marketing</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Google Analytics (GA4)</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Google Ads</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Linkedin Ads</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">AI</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">ChatGPT</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Gemini</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Midjourney</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Writesonic</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Soft Skills</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Result-Oriented</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Creative & Curious</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Hands-on-attitude</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Relationship Builder</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Adaptive</div>
+                        </div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Sense Of Humour</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <!-- Languages Section-->
+            <section id="languages" class="pt-1 pb-1">
+              <h2 class="text-secondary fw-bolder mb-4" style="color: #29866d !important">Languages</h2>
+              <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-3">
+                  <div class="row gx-5">
+                    <div class="col-lg-6 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">English</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Advanced</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">French</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Upper Intermediate</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Lithuanian</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Native</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 text-center text-lg-start mb-4">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-secondary fw-bolder mb-2">Flemish</div>
+                        <div class="mb-2">
+                          <div class="small text-muted">Beginner</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <!-- Skills Section-->
+            <!-- <section id="skills" class="pt-1 pb-1">
+              <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-3">
                   <div class="mb-4">
                     <div class="d-flex align-items-center mb-4">
                       <h3 class="fw-bolder mb-0">
@@ -367,7 +548,6 @@
                       </div>
                     </div>
                   </div>
-                  <!-- Soft Skills list-->
                   <div class="mb-4">
                     <div class="d-flex align-items-center mb-4">
                       <h3 class="fw-bolder mb-0">
@@ -397,7 +577,6 @@
                       </div>
                     </div>
                   </div>
-                  <!-- Languages -->
                   <div class="mb-0">
                     <div class="d-flex align-items-center mb-4">
                       <h3 class="fw-bolder mb-0">
@@ -418,7 +597,7 @@
                   </div>
                 </div>
               </div>
-            </section>
+            </section> -->
           </div>
         </div>
       </div>
