it looks the best

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <li class="nav-item"><a class="nav-link me-lg-3" href="#skills">Skills</a></li>
           </ul>
           <a
-            href="mailto:ziville.kairyte@gmail.com"
+            href="mailto:zikairyte@gmail.com"
             target="_blank"
             class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0"
           >
             <span class="d-flex align-items-center">
               <i class="bi-chat-text-fill me-2"></i>
-              <span class="small">ziville.kairyte@gmail.com</span>
+              <span class="small">zikairyte@gmail.com</span>
             </span>
           </a>
         </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="col-lg-6">
             <div>
-              <img class="img-fluid rounded-circle shadow border-0" src="assets/img/zivile.jpg" />
+              <img class="img-fluid rounded-circle shadow border-0" src="assets/img/zivile.png" />
             </div>
           </div>
         </div>
