Changed text of experience

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
             <div class="mb-5 mb-lg-0 text-center text-lg-start">
               <h1 class="display-1 lh-1 mb-3">Zivile Kairyte</h1>
               <p class="lead fw-normal mb-5">
-                Experienced Communications Manager with a track record of successfully driving growth and executing
-                results-based marketing programs. Skilled in crafting clear and compelling value propositions for
-                diverse audiences and managing multiple projects in a fast-paced environment. Exceptional verbal and
-                written communication skills in English, with a good knowledge of French.
+                I’m a digital marketing and communications professional with over 6 years of experience across both startups and international organizations. 
+                I specialize in website management, social media, email campaigns, and social content strategies.
+                Skilled in crafting clear and compelling value propositions for diverse audiences and managing multiple projects in a fast-paced environment.
               </p>
             </div>
           </div>
@@ -119,17 +118,16 @@
                     <div class="col-lg-8">
                       <div>
                         <div class="mb-3">
-                          An European association working with EU institutions and the home cleaning products industry,
-                          representing over FMCG 900 companies, including first-tier corporations: Unilever, P&G, Henkel.
-                          I focused on improving corporate communications internally and externally.
+                          A European association working with EU institutions and representing over 900 CPG companies,including Unilever, P&G, Henkel and other first-tier corporations.
                         </div>
                         <ul>
-                          <li>Led website management and successful relaunch projects, enhancing user experience and aligning content strategy with organizational goals</li>
-                          <li>Developed marketing materials and managed the planning and execution of high-impact industry events, driving member engagement and visibility</li>
-                          <li>Enhanced email and social media marketing campaigns, improving reach and engagement while aligning messaging with broader communication strategies</li>
-                          <li>Conducted comprehensive industry research, analyzing market data and trends to inform communication strategies and provide insights to stakeholders</li>
-                          <li>Led a pan-European communication group, fostering collaboration and ensuring consistent messaging across diverse teams and regions</li>
-                          <li>Supported sustainability initiatives in partnership with leading industry stakeholders, contributing to the development of eco-friendly practices and communication strategies</li>
+                          <li>Led website management, relaunches, and content marketing strategy.</li>
+                          <li>Developed marketing materials, ensuring strategic alignment and strengthening digital presence.</li>
+                          <li>Set up and led lifecycle marketing (email and social) which improved by 27% annually.</li>
+                          <li>Analysed market data and trends to support strategic communication initiatives.</li>
+                          <li>Led a communication experts group of 13 EU countries, facilitating cross-border collaboration.</li>
+                          <li>Facilitated sustainability initiatives within top CPG companies across Europe.</li>
+                          <li>Organised online and physical events for key stakeholders (European Commission, press media, CPGcompanies, policy makers).</li>
                         </ul>
                       </div>
                     </div>
@@ -151,13 +149,12 @@
                     <div class="col-lg-8">
                       <div>
                         <div class="mb-3">
-                          I was part of the Commissioner’s Sinkevicius cabinet and was focusing on improving communication activities covering these topics:
-                          Circular Economy Action Plan, Chemicals Strategy for Sustainability, Hydrogen Strategy and Biodiversity Strategy.
+                          Commissioner’s Sinkevicius cabinet covers these topics: Circular Economy, Chemicals Strategy forSustainability, Hydrogen Strategy, Biodiversity Strategy.
                         </div>
                         <ul>
-                          <li>Organized virtual and in-person events, ensuring smooth execution and participation</li>
-                          <li>Developed communication strategy to align with organizational objectives</li>
-                          <li>Wrote articles for external communications, enhancing outreach and visibility/li>
+                          <li>I was part of the team that organised a conference for environmental ministries.</li>
+                          <li>Worked with the Commissioner's communication team to execute communication strategy.</li>
+                          <li>Wrote articles for external communication, enhancing outreach and visibility.</li>
                         </ul>
                       </div>
                     </div>
@@ -179,8 +176,7 @@
                     <div class="col-lg-8">
                       <div>
                         <div class="mb-3">
-                          Lympo is a blockchain startup eager to help people to develop and maintain healthy sports habits.
-                          Being part of the core team initiated the crowdfunding, raised 12 million US dollars, a successfully finished the campaign 3 days before the closing date.
+                          Lympo is a blockchain startup promoting healthy sports habits. As part of the core team, I helped raise $12 million through crowdfunding.
                         </div>
                         <ul>
                           <li>Developed and executed comprehensive marketing strategies for growth and engagement</li>
@@ -216,9 +212,10 @@
                           My primary responsibilities involved setting up, creating, and expanding the website’s social media presence, driving audience growth and engagement.
                         </div>
                         <ul>
-                          <li>Developed and executed a targeted social media strategy to boost engagement</li>
-                          <li>Supervised copywriters and graphic designers, ensuring consistent content delivery</li>
-                          <li>Achieved a 27% increase in social media growth with no additional budget</li>
+                          <li>Established and developed the social media presence, driving audience growth and engagement.</li>
+                          <li>Developed and executed a targeted social media strategy to boost engagement.</li>
+                          <li>Supervised copywriters and graphic designers, ensuring consistent content delivery.</li>
+                          <li>Achieved a 27% increase in social media growth, 10% engagement with no additional budget.</li>
                         </ul>
                       </div>
                     </div>
