swap of position and duration of work

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Jun 2021 - Nov 2023</div>
-                        <div class="small fw-bolder">Communications Manager</div>
+                        <div class="text-primary fw-bolder mb-2">Communications Manager</div>
+                        <div class="small fw-bolder">Jun 2021 - Nov 2023</div>
                         <div class="small text-muted">A.I.S.E</div>
                         <div class="small text-muted">Brussels, BE</div>
                       </div>
@@ -123,7 +123,7 @@
                         <ul>
                           <li>Led website management, relaunches, and content marketing strategy.</li>
                           <li>Developed marketing materials, ensuring strategic alignment and strengthening digital presence.</li>
-                          <li>Set up and led lifecycle marketing (email and social) which improved by 27% annually.</li>
+                          <li>Set up and led lifecycle marketing (email and social) which grew audience by 30% annually.</li>
                           <li>Analysed market data and trends to support strategic communication initiatives.</li>
                           <li>Led a communication experts group of 13 EU countries, facilitating cross-border collaboration.</li>
                           <li>Facilitated sustainability initiatives within top CPG companies across Europe.</li>
@@ -140,8 +140,8 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Mar 2020 - Feb 2021</div>
-                        <div class="small fw-bolder">BlueBook Trainee</div>
+                        <div class="text-primary fw-bolder mb-2">Commissioner's Cabinet BlueBook Trainee</div>
+                        <div class="small fw-bolder">Mar 2020 - Feb 2021</div>
                         <div class="small text-muted">European Commission</div>
                         <div class="small text-muted">Brussels, BE</div>
                       </div>
@@ -167,8 +167,8 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Sep 2017 - Jul 2018</div>
-                        <div class="small fw-bolder">Marketing Executive</div>
+                        <div class="text-primary fw-bolder mb-2">Marketing Executive</div>
+                        <div class="small fw-bolder">Sep 2017 - Jul 2018</div>
                         <div class="small text-muted">Lympo.io</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
@@ -199,8 +199,8 @@
                   <div class="row gx-5">
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">2018</div>
-                        <div class="small fw-bolder">Social Media Marketing Executive</div>
+                        <div class="text-primary fw-bolder mb-2">Social Media Marketing Executive</div>
+                        <div class="small fw-bolder">Jan 2018 - Jun 2018</div>
                         <div class="small text-muted">Cryptonews.com</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
@@ -228,24 +228,24 @@
                   <div class="row gx-5">
                     <div class="col-lg-4 text-center text-lg-start mb-4">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">2011 - 2020</div>
-                        <div class="small fw-bolder">Communication Assistant</div>
+                        <div class="text-primary fw-bolder mb-2">Communication Assistant</div>
+                        <div class="small fw-bolder">2011 - 2020</div>
                         <div class="small text-muted">Jardas ir Ko</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start mb-4">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">Sep 2015 - Nov 2015</div>
-                        <div class="small fw-bolder">Human Resource & Store Management Intern</div>
+                        <div class="text-primary fw-bolder mb-2">Human Resource & Store Management Intern</div>
+                        <div class="small fw-bolder">Sep 2015 - Nov 2015</div>
                         <div class="small text-muted">Rimi Lietuva</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start mb-4">
                       <div class="bg-light p-3 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">2013 - 2017</div>
-                        <div class="small fw-bolder">Freelancer photographer</div>
+                        <div class="text-primary fw-bolder mb-2">Freelancer photographer</div>
+                        <div class="small fw-bolder">2013 - 2017</div>
                         <div class="small text-muted">Vilnius, LT</div>
                       </div>
                     </div>
