--- a/index.html
+++ b/index.html
@@ -103,6 +103,45 @@
                   </a>
                 </div>
               </div>
+            
+              <!-- Experience Card 0-->
+              <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-3">
+                  <div class="row gx-5">
+                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-primary fw-bolder mb-2"><!-- Experience Card 0-->
+              <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-3">
+                  <div class="row gx-5">
+                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-primary fw-bolder mb-2"><!-- Experience Card 0-->
+              <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-3">
+                  <div class="row gx-5">
+                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                      <div class="bg-light p-3 rounded-4">
+                        <div class="text-primary fw-bolder mb-2">Marketing and Communications Freelancer</div>
+                        <div class="small fw-bolder">Oct 2024 - Ongoing</div>
+                        <div class="small text-muted">Freelance</div>
+                        <div class="small text-muted">Europe</div>
+                      </div>
+                    </div>
+                    <div class="col-lg-8">
+                      <div>
+                        <div class="mb-3">
+                          Marketing projects with internationally working B2B and B2C companies.
+                        </div>
+                        <ul>
+                          <li>Communication strategy for key accounts, content creation, emails.</li>
+                          <li>Creating sales enablement materials.</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              
               <!-- Experience Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
                 <div class="card-body p-3">
@@ -118,15 +157,15 @@
                     <div class="col-lg-8">
                       <div>
                         <div class="mb-3">
-                          A European association working with EU institutions and representing over 900 CPG companies,including Unilever, P&G, Henkel and other first-tier corporations.
+                          A European association working with +900 CPG companies including Unilever, P&G, Henkel, Reckitt, EU institutions and national associations. Reported directly to Communications Director and managed budget of the projects.
                         </div>
                         <ul>
-                          <li>Led website management, relaunches, and content marketing strategy.</li>
-                          <li>Developed marketing materials, ensuring strategic alignment and strengthening digital presence.</li>
-                          <li>Set up and led lifecycle marketing (email and social) which grew audience by 30% annually.</li>
-                          <li>Analysed market data and trends to support strategic communication initiatives.</li>
-                          <li>Led a communication experts group of 13 EU countries, facilitating cross-border collaboration.</li>
-                          <li>Facilitated sustainability initiatives within top CPG companies across Europe.</li>
+                          <li>Developed content campaigns tailored to target audiences.</li>
+                          <li>Created marketing materials (presentations, one-pagers, case studies) for marketing campaigns.</li>
+                          <li>Responsible for account based marketing campaigns (lead acquisition, events, webinars, email marketing and socials), achieving 30% annual audience growth.</li>
+                          <li>Analysed market trends, competitors, and industry to support strategic communication initiatives. </li>
+                          <li>Organized training programs (workshops, interactive sessions) for CPGs, national associations.</li>
+                          <li>Facilitated sustainability initiatives within Henkel, Reckitt, P&G, and Unilever across Europe. </li>
                           <li>Organised online and physical events for key stakeholders (European Commission, press media, CPG companies, policy makers).</li>
                         </ul>
                       </div>
@@ -149,12 +188,12 @@
                     <div class="col-lg-8">
                       <div>
                         <div class="mb-3">
-                          Commissioner’s Sinkevicius cabinet covers these topics: Circular Economy, Chemicals Strategy forSustainability, Hydrogen Strategy, Biodiversity Strategy.
+                          Commissioner’s Sinkevicius cabinet covers these topics: Circular Economy, Chemicals Strategy for Sustainability, Hydrogen Strategy, Biodiversity Strategy. Reported directly to the Head of Cabinet. 
                         </div>
                         <ul>
-                          <li>I was part of the team that organised a conference for environmental ministries.</li>
-                          <li>Worked with the Commissioner's communication team to execute communication strategy.</li>
-                          <li>Wrote articles for external communication, enhancing outreach and visibility.</li>
+                          <li>External communications: articles, supporting events organisation.</li>
+                          <li>Internal communications: research based weekly briefings for internal teams materials and briefing packs for decision-makers.</li>
+                          <li>Supported outreach to policymakers and ministries on sustainability and circular economy.</li>
                         </ul>
                       </div>
                     </div>
@@ -344,13 +383,16 @@
                           <div class="small text-muted">Content Marketing</div>
                         </div>
                         <div class="mb-2">
+                          <div class="small text-muted">ABM</div>
+                        </div>
+                        <div class="mb-2">
                           <div class="small text-muted">Field Marketing</div>
                         </div>
                         <div class="mb-2">
                           <div class="small text-muted">Print Marketing</div>
                         </div>
                         <div class="mb-2">
-                          <div class="small text-muted">E-commerce Marketing</div>
+                          <div class="small text-muted">Marketing materials</div>
                         </div>
                         <div class="mb-2">
                           <div class="small text-muted">Social Media Marketing</div>
